<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/gray"
                android:text="@string/calc_name"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="right|bottom"
                android:lines="4"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"
                android:rowCount="5">

                <Button
                    android:id="@+id/bt_clear"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_square"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/square"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_sqrt"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/sqrt"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_multiply"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/multiply"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_seven"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/seven"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_eight"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/eight"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_nine"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/nine"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_divide"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/divide"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_four"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/four"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_five"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/five"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_six"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/six"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_minus"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_one"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/one"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_two"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/two"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_three"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/three"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_add"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_reciprocal"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/reciprocal"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_zero"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/zero"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/gray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_dot"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/dot"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />

                <Button
                    android:id="@+id/bt_equal"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:text="@string/equal"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/darkGray"
                    android:textSize="@dimen/button_font_size" />
            </GridLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>